239 correct the flb of relaxed node in the dot export (#240)
* compute the flb of mergedNode

* update the display of flb

* replace String.format() by "".formatted

* set the flb in node instead of NodeSubProblem

* fix access to remaining variables